--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: Arial, Helvetica, sans-serif;
   background-image: url(images/77826.jpg);
   letter-spacing: 1px;
   display: grid;
@@ -21,11 +22,15 @@ span {
 }
 
 .container {
-  height: auto;
+  position: absolute;
+  top: 45%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  /* height: auto; */
   width: 300px;
   background-color: #e8d0f0;
   padding: 20px;
-  margin: 20vh;
+  /* margin: 20vh; */
   border-radius: 7px;
 }
 
@@ -36,9 +41,33 @@ h3 {
   font-weight: 450;
 }
 
+#cost_error {
+  display: none;
+  text-align: center;
+  font-size: medium;
+  font-weight: 450;
+}
+
+#selling_error {
+  display: none;
+  text-align: center;
+  font-size: medium;
+  font-weight: 450;
+}
+
 footer {
-  position: fixed;
-  bottom: 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #e8d0f0;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Another way of centralizing the container
