--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ span {
   top: 45%;
   left: 47%;
   transform: translate(-50%, -50%);
-  /* height: auto; */
   width: 300px;
   background-color: #e8d0f0;
   padding: 20px;
@@ -35,7 +34,7 @@ span {
 }
 
 h3 {
-  display: none;
+  /* display: none; */
   text-align: center;
   font-size: medium;
   font-weight: 450;
