added clear for no profit

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ h3 {
   text-align: center;
   font-size: medium;
   font-weight: 450;
+  color: red;
 }
 
 #selling_error {
@@ -52,6 +53,7 @@ h3 {
   text-align: center;
   font-size: medium;
   font-weight: 450;
+  color: red;
 }
 
 footer {
